--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="UTF-8">
-<title>Verve</title>
+<title>Тэмүүжин | Designer</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="img/favicon.svg" />
@@ -67,7 +67,7 @@
 				<img src="http://placehold.it/571x327" alt="">
 			</p> -->
 			<!-- Countdown -->
-			<ul data-countdown="2016/6/27 12:00:00" id="countdown" class="coming-timer">
+			<ul data-countdown="2021/12/31 23:59:59" id="countdown" class="coming-timer">
 				<li>
 					<span class="coming-digits">60</span>
 					days
