--- a/index-edit.html
+++ b/index-edit.html
@@ -393,7 +393,7 @@
 		<!-- Logotype -->
 		<p class="footer-logo">
 			<a href="index.html">
-				<img src="img/logo.png" alt="">
+				<img src="img/logo.svg" alt="">
 			</a>
 		</p>
 
