--- a/index-edit.html
+++ b/index-edit.html
@@ -443,7 +443,7 @@
 		</ul>
 
 		<!-- Copyright -->
-		<p class="footer-copyright">2016 © Stockware All Rights Reserved</p>
+		<p class="footer-copyright">2021 © All Rights Reserved</p>
 
 	</div>
 </footer>
